--- a/src/web/admins/templates/admins/dramaseries_form.html
+++ b/src/web/admins/templates/admins/dramaseries_form.html
@@ -7,24 +7,35 @@
 
 {% block content %}
 <div class="container">
-    <div class="card">
-        <div class="card-body">
+
             {% if object %}
             <h1>Update Drama Series</h1>
             {% else %}
             <h1>Create Series</h1>
             {% endif %}
+            <div class="mt-2">
+                <a href="{% url 'admins:drama-list' %}" class="mt-2 btn btn-sm btn-secondary"><i
+                        class="fa fa-arrow-left"
+                        aria-hidden="true"></i>
+                    Back to List</a>
+            </div>
+            <div class="row justify-content-center mt-4">
+                <div class="col-12 col-sm-12">
+                    <div class="card shadow-lg">
+                        <div class="card-body">
+                            <form method="post" novalidate>
+                                {% csrf_token %}
+                                {{ form.non_field_errors }}
+                                {{ form|crispy }}
 
-            <form method="post" novalidate enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form.non_field_errors }}
-                {{ form|crispy }}  <!-- Use Crispy Forms for better layout -->
+                                <button type="submit" class="btn btn-primary">Confirm</button>
+                                <br>
+                            </form>
 
-                <button type="submit" class="btn btn-primary">Confirm</button>
-                <br>
-            </form>
-
-            <a href="{% url 'admins:drama-list' %}" class="btn btn-secondary mt-2">Back to Drama Series List</a>
+                        </div>
+                    </div>
+                </div>
+            </div>s
         </div>
     </div>
     {% endblock %}
