--- a/src/web/admins/templates/admins/language_list.html
+++ b/src/web/admins/templates/admins/language_list.html
@@ -7,15 +7,35 @@
 {% block subtitle %} {{ request.user }} {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col-12">
-        <button type="button" class="btn btn-primary mb-3 sticky-right"
+<div class="row justify-content-between">
+    <div class="col-6 col-md-4 p-2 mt-2">
+        <form method="get">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control " placeholder="Enter language Name"
+                       id="id_tag" name="name" aria-describedby="search-button">
+                <button class="btn btn-secondary" type="submit" id="search-button">
+                    <i class="fas fa-search"></i>
+                </button>
+                <a href="{% url 'admins:language-list' %}" class="btn btn-danger ml-2" id="clear-button">
+                    <i class="fas fa-brush"></i>
+                </a>
+
+
+            </div>
+        </form>
+    </div>
+    <div class="col-4 mt-0 pt-0 mb-2 d-flex align-items-center justify-content-end">
+        <button type="button" class="btn btn-primary mb-1"
                 onclick="window.location.href='{% url 'admins:language-create' %}'">
             Add Language
         </button>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
         <div class="row">
             <div class="col-12">
-                <div class="card">
+                <div class=" shadow-lg card">
                     {% if object_list %}
                     <div class="table-responsive">
                         <table class="table table-hover">
@@ -63,26 +83,29 @@
     </div>
 </div>
 
-    <div class="row">
+
+ <div class="row">
         <div class="col-md-12">
             <div class="mt-4">
                 <ul class="pagination">
-                    {% if language_list.has_previous %}
-                        <li>
+                    {% if object_list.has_previous %}
+                        <li class="page-link rounded">
                             <span>
-                                <a href="{% relative_url language_list.previous_page_number 'page' request.GET.urlencode %}">
+                                <a href="{% relative_url object_list.previous_page_number 'page' request.GET.urlencode %}">
                                     Previous
                                 </a>
                             </span>
                         </li>
                     {% endif %}
-                    <li class="">
-                        <span>Page {{ language_list.number }} of {{ language_list.paginator.num_pages }}.</span>
+                    &nbsp;&nbsp;&nbsp;
+                    <li  class="page-link rounded">
+                        <span>Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</span>
                     </li>
-                    {% if language_list.has_next %}
-                        <li>
+                    &nbsp;&nbsp;&nbsp;
+                    {% if object_list.has_next %}
+                        <li class="page-link rounded">
                             <span>
-                                <a href="{% relative_url language_list.next_page_number 'page' request.GET.urlencode %}">
+                                <a href="{% relative_url object_list.next_page_number 'page' request.GET.urlencode %}">
                                     Next
                                 </a>
                             </span>
