Feat:ADministration Updated

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Your digital partner">
+    <meta name="description" content="watch Turkish seasons">
     <meta name="author" content="mark">
-    <meta name="developer" content="exarth.com">
-    <meta name="org-name" content="exarth"/>
+    <meta name="developer" content="dramaverse.info">
+    <meta name="org-name" content="dramaverse"/>
     <link rel="icon" href="
-            {% if app.favicon %}{{ app.favicon.url }}{% else %}{% static 'core/images/logos/favico.ico' %}{% endif %}">
+            {% if app.favicon %}{{ app.favicon.url }}{% else %}{% static 'website/img/logo/white-logo.png' %}{% endif %}">
 
     <title>
 
